Ajustando detalhes para delete Organizador